--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bignumber.js": "^9.0.1",
+    "ethers": "^5.0.19",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "use-wallet": "^0.8.0",
+    "web-vitals": "^0.2.4",
+    "web3": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
