--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/user-event": "^12.1.10",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.0.19",
+    "fontsource-courier-prime": "^3.0.5",
+    "fontsource-roboto": "^3.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "use-wallet": "^0.8.0",
     "web-vitals": "^0.2.4",
