More complete theming, footer, account, skeleton cleanup

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "bignumber.js": "^9.0.1",
     "ethers": "^5.0.19",
     "fontsource-courier-prime": "^3.0.5",
+    "fontsource-league-spartan": "^3.0.5",
     "fontsource-roboto": "^3.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "use-wallet": "^0.8.0",
