Add Eth Avatars, Doc rendering, various other components

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "fontsource-courier-prime": "^3.0.5",
     "fontsource-league-spartan": "^3.0.5",
     "fontsource-roboto": "^3.0.3",
+    "markdown-to-jsx": "^7.1.0",
+    "md5": "^2.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gravatar": "^2.6.3",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
