--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-gravatar": "^2.6.3",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.2.2",
     "react-scripts": "4.0.0",
     "use-wallet": "^0.8.0",
+    "victory": "^35.4.0",
     "web-vitals": "^0.2.4",
     "web3": "^1.3.0"
   },
