--- a/package.json
+++ b/package.json
@@ -5,27 +5,33 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@pqina/flip": "^1.7.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.0.19",
+    "flipclock": "^0.10.8",
     "fontsource-courier-prime": "^3.0.5",
     "fontsource-league-spartan": "^3.0.5",
     "fontsource-roboto": "^3.0.3",
     "markdown-to-jsx": "^7.1.0",
     "md5": "^2.3.0",
     "react": "^17.0.1",
+    "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
+    "react-fundraising-countdown": "0.0.17",
     "react-gravatar": "^2.6.3",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
     "react-scripts": "4.0.0",
+    "react-snowstorm": "0.0.3",
     "use-wallet": "^0.8.0",
     "victory": "^35.4.0",
     "web-vitals": "^0.2.4",
-    "web3": "^1.3.0"
+    "web3": "^1.3.0",
+    "x-react-flipclock": "^0.1.184153"
   },
   "scripts": {
     "start": "react-scripts start",
