--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "@testing-library/user-event": "^12.1.10",
     "bignumber.js": "^9.0.1",
     "ethers": "^5.0.19",
-    "flipclock": "^0.10.8",
-    "fontsource-courier-prime": "^3.0.5",
     "fontsource-league-spartan": "^3.0.5",
     "fontsource-roboto": "^3.0.3",
     "markdown-to-jsx": "^7.1.0",
     "md5": "^2.3.0",
     "react": "^17.0.1",
-    "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-fundraising-countdown": "0.0.17",
     "react-gravatar": "^2.6.3",
@@ -30,8 +27,7 @@
     "use-wallet": "^0.8.0",
     "victory": "^35.4.0",
     "web-vitals": "^0.2.4",
-    "web3": "^1.3.0",
-    "x-react-flipclock": "^0.1.184153"
+    "web3": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
