Update deploy branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Website Deploy, Static to Blob CI
 
 on:
   push:
-      branches: [ main, workflowTest ]
+      branches: [ main, workflowTest, clock-update ]
 
 env:
   PACKAGE_PATH: 'build'  
