--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fontsource-roboto": "^3.0.3",
     "markdown-to-jsx": "^7.1.0",
     "md5": "^2.3.0",
+    "notistack": "^1.0.2",
     "react": "^17.0.1",
     "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
