--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "web-vitals": "^0.2.4",
     "web3": "^1.3.0"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
